# chatbot-service

./: .gitignore  MAIN.md  README.md  SYSTEM_RECREATION_GUIDE.md  TUTORIAL_REFERENCE.md  context.md  data_loader.py  pyproject.toml  pytest.ini  streamlit_app.py  test.html
BUSINESS_PLATFORM_DOCS/: README.md
BUSINESS_PLATFORM_DOCS/inventory-chatbot-plan/: 01-product-vision.md  02-business-owner-inventory-chatbot.md  03-implementation-roadmap.md  04-pricing-packages.md  05-website-embed-widget-plan.md  README.md
BUSINESS_PLATFORM_DOCS/voice-call-center-plan/: 05-voice-call-center-automation-plan.md  README.md
auth-service/: INTERNAL_USAGE.md  README.md  package-lock.json  package.json
auth-service/app/: page.tsx
chatbot/: .gitignore
chatbot-service/: main.py  vector_db.py
chatbot-service/scripts/: run-inngest.bat  run-inngest.ps1
chatbot-service/tests/: test_end_to_end_inngest.py
chatbot/backend/: .env.example  pyproject.toml
chatbot/scripts/: dev-all.ps1  run-frontend.ps1  run-inngest.ps1
javascript-implementation/: README.md  package.json
microservices/: .gitignore
microservices/auth-service/: .env.example
microservices/chatbot-service/: README.md  custom_types.py  main.py
microservices/webscrapper/: Dockerfile  README.md  requirements.txt
monorepo/: .gitignore  BACKGROUND_JOBS_PLAN.md  README.md  package-lock.json  package.json  turbo.json
monorepo/apps/chatbot-api/: .env.example  .gitignore  README.md  package.json  pyproject.toml
monorepo/apps/chatbot-api/app/: auth.py  config.py  contracts.py  engine.py  main.py  pdf_loader.py  providers.py  vector_store.py
monorepo/apps/chatbot-api/chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
monorepo/apps/chatbot-api/chroma_data/: chroma.sqlite3
monorepo/apps/chatbot-api/chroma_data/a0c81218-ccad-4564-bd2c-274018524b4b/: index_metadata.pickle
monorepo/apps/chatbot-api/tests/: test_auth.py  test_engine_replace.py  test_main_security.py
monorepo/apps/model-gateway-api/: .env.example  .gitignore  README.md  package.json  pyproject.toml
monorepo/apps/model-gateway-api/app/: main.py
monorepo/apps/model-gateway-api/app/api/: router.py
monorepo/apps/model-gateway-api/app/api/routes/: chat.py  health.py  rag.py
monorepo/apps/model-gateway-api/app/core/: config.py
monorepo/apps/model-gateway-api/app/providers/: openrouter_provider.py
monorepo/apps/model-gateway-api/app/rag/: __init__.py  engine.py  pdf_loader.py  vector_store.py
monorepo/apps/model-gateway-api/app/schemas/: chat.py  rag.py
monorepo/apps/model-gateway-api/app/services/: chat_service.py
monorepo/apps/model-gateway-api/model_gateway_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
monorepo/apps/model-gateway-api/tests/: test_chat.py  test_health.py  test_rag_engine.py
scripts/: run-api.bat  run-api.ps1  run-js-api.bat  run-js-api.ps1  run-js-inngest.ps1
tests/: conftest.py  test_vector_db.py
webscrapper/: .env.example
(+334 files in other folders)
